arrumado bug dark mode

--- a/src/app/views/home/home/home.component.css
+++ b/src/app/views/home/home/home.component.css
@@ -3,7 +3,6 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: white;
     border-radius: 20px;
     box-sizing: border-box;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
