--- a/src/app/views/login/login/login.component.css
+++ b/src/app/views/login/login/login.component.css
@@ -36,7 +36,7 @@
 
 .pag-publica{
     width: 100%;
-    height: 100%;
+    height: 85vh;
     background: #ad8bc2;
     background: linear-gradient(45deg, rgba(173,139,194,1) 0%, rgb(77, 18, 95) 100%);
     display: flex;
